client/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 10px;
}

html,
body {
    font-family: 'Raleway', sans-serif;
    text-rendering: optimizeLegibility;
}

.App {
  display: flex;
  flex-flow: column;
}

.welcome-message {
  font-family: Raleway;
  font-size: 0.6rem;
  padding-top: 1rem;
  padding-left: 1rem;
  padding-right: 0.2rem;
  justify-content: center;
  color: grey;
}

/*Body*/
/*============================*/
/* Images */

.image-created {
  font-size: 0.5rem;
  font-family: 'Reenie Beanie', cursive;
}

.list-of-images {
  max-width: 80vw;
  margin-top: 2rem;
  /* display: grid;
  grid-template-columns: repeat(auto-fill,minmax(140px, 1fr));
  grid-gap: 6px;
  grid-auto-rows: minmax(100px, 140px); */
  display: flex;
  align-self: center;
  justify-content: center;
  flex-wrap: wrap;
}

/* .short {
  grid-column-end: span 1;
  grid-row-end: span 2;
}

.tall {
  grid-column-end: span 2;
  grid-row-end: span 3;
}

.mini {
  grid-column-end: span 4;
  grid-row-end: span 2;
} */

.list-of-1-image {
  height: 60vh;
  display: flex;
  align-self: center;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.background-blur {
  position: absolute;
  content: '';
  height: 68vh;
  width: 100vw;
  filter: opacity(20%) blur(3px);
  z-index: -10;
}


.image-card {
  margin-top: 4rem;
  height: 63vh;
  min-width: 40vh;
  display: flex;
  flex-flow: column;
  align-items: center;
  padding: 0.5rem;
  background: white;
  box-shadow: 0px 3px 4px -3px rgba(82,82,82,0.68);
}

.image-src {
  max-height:48vh;
  border: 0.1rem solid #1f1e1e;
  cursor: pointer;
}

.image-title {
  color: #444546;
  /* align-self: baseline; */
  font-size: 0.5rem;
}

.image-description {
  font-size: 0.8rem;
}

/*============================*/
/* Media Queries */

@media screen and (max-width:600px) {
  .list-of-images {
    display: grid;
    grid-gap: 10px;
    grid-template-columns: 1fr 1fr;
  }
}

@media screen and (max-width:800px) {
  .welcome-message {
    font-size: 1rem;
  }
}


/*============================*/
/* Helpers */

.spinner {
  width: 40px;
  height: 40px;
  margin: 100px auto;
  background-color: #333;

  border-radius: 100%;  
  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
  animation: sk-scaleout 1.0s infinite ease-in-out;
}

@-webkit-keyframes sk-scaleout {
  0% { -webkit-transform: scale(0) }
  100% {
    -webkit-transform: scale(1.0);
    opacity: 0;
  }
}

@keyframes sk-scaleout {
  0% { 
    -webkit-transform: scale(0);
    transform: scale(0);
  } 100% {
    -webkit-transform: scale(1.0);
    transform: scale(1.0);
    opacity: 0;
  }
}

